objects/Repair_Details__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Repair Details</relationshipLabel>
        <relationshipName>Repair_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plumbing</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Heating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_a_second_visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs a second visit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Repair_Date__c</fullName>
        <label>Repair Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repair_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Technician</label>
        <referenceTo>Repair_Technician__c</referenceTo>
        <relationshipLabel>Repair Details</relationshipLabel>
        <relationshipName>Repair_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Repair Details</label>
    <nameField>
        <label>Repair Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repair Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>